--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title> SUV Purchase  </title>
-    <link rel="stylesheet" href="../static/css/style.css"
+    <title>Malaria outbreak prediction</title>
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
-<body><center>
-<h1> 🚗 SUV Purchase Prediction 🚗</h1>
-<form action="./predict" method="POST">
-    <table>
-        <tr>
-            <td>
-                <label for ="age"> AGE</label>
-            </td>
-            <td>:</td>
-            <td>
-                <input type="number" name="age" placeholder="enter age"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <label for ="salary"> ESTIMATED SALARY</label>
-                 <td>:</td>
-            <td>
-                <input type="number" name="salary" placeholder="enter estimated value"/>
-            </td>
-            </td>
-        </tr>
-        <tr>
-             <td colspan="3">
-                <input type="submit" id="btn" value="Predict" />
-            </td>
+<body>
+    <!-- <div class="box"> -->
+    <h1>Malaria Outbreak</h1>
+    <!-- </div> -->
 
+    <!-- <div class="box"> -->
+    <center>
+    <form action="/predict" method="post">
+        <table>
+            <tr>
+                <td>
+                    <label for="maxTemp">maxTemp</label>
+                </td>
+                <td>:</td>
+                <td>
+                    <input type="number" id="maxTemp" name="maxTemp" placeholder="Enter maxTemp" min=0 />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="minTemp">minTemp</label>
+                </td>
+                <td>:</td>
+                <td>
+                    <input type="number" id="minTemp" name="minTemp	" placeholder="Enter minTemp " min="0" />
+                </td>
         </tr>
-    </table>
+        <tr>
+                <td>
+                    <label for="avgHumidity">avgHumidity</label>
+                </td>
+                <td>:</td>
+                <td>
+                    <input type="number" id="avgHumidity" name="avgHumidity" placeholder="Enter avgHumidity" min=0 />
+                </td>
+        </tr>
+         <tr>
+                <td>
+                    <label for="Rainfall">Rainfall </label>
+                </td>
+                <td>:</td>
+                <td>
+                    <input type="number" id="Rainfall" name="Rainfall" placeholder="Enter Rainfall" min=0 />
+                </td>
+        </tr>
+        <tr>
+            <td colspan="4">
+                <input id="btn" type="submit" value="Predict" >
+            </td>
+        </tr>
+        </table>
+        <p>Prediction : {{pred}}</p>
     </form>
-    <p>prediction :{{pred}}</p>
-</center>
+    </center>
+<!-- </div> -->
 </body>
 </html>
